--- a/auth-cdk/package.json
+++ b/auth-cdk/package.json
@@ -8,21 +8,29 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint-fix": "npx eslint --fix .",
+    "format": "npx prettier . --write"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "aws-cdk": "2.1031.0",
     "esbuild": "^0.25.11",
+    "eslint": "^9.39.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.46.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.215.0",
     "constructs": "^10.0.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "prettier": "^3.6.2"
   }
 }
