--- a/auth-lambda/package.json
+++ b/auth-lambda/package.json
@@ -5,18 +5,28 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "package": "npm run clean && node build.js"
+    "package": "npm run clean && node build.js",
+    "lint-fix": "npx eslint --fix .",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.600.0",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@aws-sdk/client-ssm": "^3.927.0",
+    "@aws-sdk/util-dynamodb": "^3.927.0",
+    "axios": "^1.13.2",
     "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.2.0"
+    "jwks-rsa": "^3.2.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/aws-lambda": "^8.10.157",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
     "esbuild": "^0.25.11",
-    "typescript": "^5.3.0"
+    "eslint": "^9.39.1",
+    "prettier": "3.6.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3"
   }
 }
